fix: compute enable transactions only for transaction summary